--- a/css/material.scss
+++ b/css/material.scss
@@ -1,3 +1,113 @@
 .quantum-paper {
     box-shadow: 0 0 5px rgba(0, 0, 0, .1), 0 2px 3px rgba(0, 0, 0, .25);
 }
+
+.switch,
+.button,
+.card,
+.search-box,
+.quick-entry,
+.refresh-indicator,
+.app-bar,
+.snack-bar,
+.floating-action-button,
+.menu,
+.sub-menu,
+.nav-drawer,
+.right-drawer,
+.bottom-sheet,
+.dialog,
+.picker
+{
+  position: relative;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, .333);
+  -webkit-perspective: 1000px;
+  transition: all .2s ease-in-out;
+  -webkit-transition: all .2s ease-in-out;
+}
+
+.switch
+{
+  z-index: 1;
+}
+
+.button,
+.card,
+.search-box,
+.quick-entry
+{
+  z-index: 2;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, .333);
+}
+
+.refresh-indicator,
+.search-box:hover,
+.quick-entry:hover
+{
+  z-index: 3;
+  box-shadow: 0 2px 3px rgba(0, 0, 0, .333);
+}
+
+.search-box:hover,
+.quick-entry:hover
+{
+  -webkit-transform: scale(calc(1 + 3 / 250)) translate3d(0, 0, 3px);
+  transform: scale(calc(1 + 3 / 250)) translate3d(0, 0, 3px);
+}
+
+.app-bar
+{
+  z-index: 4;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, .333);
+}
+
+.snack-bar,
+.floating-action-button
+{
+  z-index: 6;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, .333);
+}
+
+.menu,
+.button:hover,
+.card:hover
+{
+  z-index: 8;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, .333);
+}
+
+.button:hover,
+.card:hover
+{
+  -webkit-transform: scale(calc(1 + 8 / 250)) translate3d(0, 0, 8px);
+  transform: scale(calc(1 + 8 / 250)) translate3d(0, 0, 8px);
+}
+
+.sub-menu
+{
+  z-index: 9;
+  box-shadow: 0 2px 9px rgba(0, 0, 0, .333);
+}
+
+.floating-action-button:hover
+{
+  z-index: 12;
+  box-shadow: 0 2px 12px rgba(0, 0, 0, .333);
+  -webkit-transform: scale(calc(1 + 12 / 250)) translate3d(0, 0, 8px);
+  transform: scale(calc(1 + 12 / 250)) translate3d(0, 0, 8px);
+}
+
+.nav-drawer,
+.right-drawer,
+.bottom-sheet
+{
+  z-index: 16;
+  box-shadow: 0 2px 16px rgba(0, 0, 0, .333);
+}
+
+.dialog,
+.picker
+{
+  z-index: 24;
+  box-shadow: 0 2px 24px rgba(0, 0, 0, .333);
+}
