--- a/css/material.css
+++ b/css/material.css
@@ -31,46 +31,54 @@
 .search-box,
 .quick-entry {
   z-index: 2;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.333); }
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.333); }
 
 .refresh-indicator,
 .search-box:hover,
 .quick-entry:hover {
   z-index: 3;
-  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.333); }
+  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.333); }
 
 .search-box:hover,
 .quick-entry:hover {
-  -webkit-transform: scale(calc(1 + 3 / 250)) translate3d(0, 0, 3px);
-  transform: scale(calc(1 + 3 / 250)) translate3d(0, 0, 3px); }
+  -webkit-transform: scale(calc(1 + 3 / 250)) translateZ(3px);
+  transform: scale(calc(1 + 3 / 250)) translateZ(3px); }
 
 .app-bar {
   z-index: 4;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.333); }
+  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.333); }
 
 .snack-bar,
 .floating-action-button {
   z-index: 6;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.333); }
+  box-shadow: 0 5px 7px rgba(0, 0, 0, 0.333); }
+
+.floating-action-button {
+  width: 50px;
+  height: 50px;
+  text-decoration: none;
+  text-align: center;
+  line-height: 50px; }
 
 .menu,
 .button:hover,
 .card:hover {
   z-index: 8;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.333); }
+  box-shadow: 0 8px 11px rgba(0, 0, 0, 0.333); }
 
 .button:hover,
 .card:hover {
-  -webkit-transform: scale(calc(1 + 8 / 250)) translate3d(0, 0, 8px);
-  transform: scale(calc(1 + 8 / 250)) translate3d(0, 0, 8px); }
+  -webkit-transform: scale(calc(1 + 8 / 250)) translateZ(8px);
+  transform: scale(calc(1 + 8 / 250)) translateZ(8px); }
 
 .sub-menu {
   z-index: 9;
   box-shadow: 0 2px 9px rgba(0, 0, 0, 0.333); }
 
 .floating-action-button:hover {
+  text-decoration: none;
   z-index: 12;
-  box-shadow: 0 2px 12px rgba(0, 0, 0, 0.333);
+  box-shadow: 0 12px 14px rgba(0, 0, 0, 0.333);
   -webkit-transform: scale(calc(1 + 12 / 250)) translate3d(0, 0, 8px);
   transform: scale(calc(1 + 12 / 250)) translate3d(0, 0, 8px); }
 
